--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,7 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  services:
+    slack:
+      open_source_reminder:
+        message: 'Hey! check this out: [Open Source metrics](%{url}) 🚀'
