Refactor similar block of code

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,13 @@ en:
         message: 'Hey! check this out: [Open Source metrics](%{url}) 🚀'
       code_climate_error:
         message: 'Hey! Check this out: [Code Climate error] Repository: %{repository} - Error: %{error}'
+  helpers:
+    meta_tags:
+      default_description: 'Engineering Metrics'
+      products_metrics_title: '%{product_name} summary'
+      repository_metrics_title: '%{repository_name} summary'
+      open_source_title: 'Open Source repositories'
+      tech_blog_title: 'Tech Blog visits'
+      tech_blog_description: '%{month_to_date_visits} visits this month'
+      default_departments_title: 'Departments'
+      departments_title: '%{department_name} department metrics'
